[gd_scene load_steps=13 format=4 uid="uid://dql4hip70ell1"]

[ext_resource type="Script" uid="uid://hddif6x0kjn5" path="res://scripts/victory_screen.gd" id="1_pfcnd"]
[ext_resource type="Texture2D" uid="uid://88g40b8out2u" path="res://sprites/background tileset.png" id="2_ll51u"]
[ext_resource type="FontFile" uid="uid://lbomj3hob8b6" path="res://sprites/crust quest title font.ttf" id="2_rixwf"]
[ext_resource type="FontFile" uid="uid://d37u7onymwm7a" path="res://sprites/normal text font.ttf" id="3_ll51u"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1juoc"]
texture = ExtResource("2_ll51u")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_wbi6c"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_1juoc")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfcnd"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.7647059, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rixwf"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.7990695, 0.60858876, 7.70092e-07, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ll51u"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.84961176, 0.64785856, 1.92523e-06, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1juoc"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.7647059, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wbi6c"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.7965563, 0.6066361, 1.347661e-06, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u4hde"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.88785976, 0.67757636, 1.1551381e-06, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 5

[node name="victory_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pfcnd")

[node name="background tileset]" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAACAAAAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAACAAEAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_wbi6c")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 138.0
offset_top = 99.0
offset_right = -127.0
offset_bottom = -365.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.94227815, 0.40702638, 0.28869376, 1)

[node name="victory" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -402.0
offset_top = -287.0
offset_right = 406.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_rixwf")
theme_override_font_sizes/font_size = 200
text = "VICTORY!"

[node name="victory message" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -462.0
offset_top = -72.0
offset_right = 503.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_ll51u")
theme_override_font_sizes/font_size = 50
text = "You have succesfully delivered yourself!"

[node name="play again" type="Button" parent="."]
layout_mode = 0
offset_left = 762.0
offset_top = 419.0
offset_right = 1119.0
offset_bottom = 510.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_pfcnd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rixwf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ll51u")
text = "PLAY AGAIN"

[node name="back to menu" type="Button" parent="."]
layout_mode = 0
offset_left = 184.0
offset_top = 420.0
offset_right = 641.0
offset_bottom = 511.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.9977897, 0.9977897, 0.9977897, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_1juoc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wbi6c")
theme_override_styles/hover = SubResource("StyleBoxFlat_u4hde")
text = "BACK TO MENU
"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PepperoniLabel" type="Label" parent="CanvasLayer"]
offset_left = 200.0
offset_top = 552.0
offset_right = 624.0
offset_bottom = 633.0
theme_override_fonts/font = ExtResource("3_ll51u")
theme_override_font_sizes/font_size = 70
text = "Pepperoni: 0"

[node name="TimeLabel" type="Label" parent="CanvasLayer"]
offset_left = 802.0
offset_top = 545.0
offset_right = 1079.0
offset_bottom = 627.0
theme_override_fonts/font = ExtResource("3_ll51u")
theme_override_font_sizes/font_size = 70
text = "Time: 0s"

[connection signal="pressed" from="play again" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="back to menu" to="." method="_on_back_to_menu_pressed"]
